--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -44,26 +44,32 @@ jobs:
       - name: Run all tests
         if: "github.event.inputs.deployment_target == 'all'"
         run: pytest --alluredir=allure-results
+        continue-on-error: true
 
       - name: Run smoke tests
         if: "github.event.inputs.deployment_target == 'smoke'"
         run: pytest -m smoke --alluredir=allure-results
+        continue-on-error: true
 
       - name: Run critical tests
         if: "github.event.inputs.deployment_target == 'critical'"
         run: pytest -m critical --alluredir=allure-results
+        continue-on-error: true
 
       - name: Run high tests
         if: "github.event.inputs.deployment_target == 'high'"
         run: pytest -m high --alluredir=allure-results
+        continue-on-error: true
 
       - name: Run medium tests
         if: "github.event.inputs.deployment_target == 'medium'"
         run: pytest -m medium --alluredir=allure-results
+        continue-on-error: true
 
       - name: Run low tests
         if: "github.event.inputs.deployment_target == 'low'"
         run: pytest -m low --alluredir=allure-results
+        continue-on-error: true
 
       - name: Install Java
         uses: actions/setup-java@v4
